objects/ccpt__Group_Link__c.object
<CustomObject>
    <description>Links a record to a grouping sObject</description>
    <fields>
        <fullName>ccpt__Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the board that this grouper is linked to.</description>
        <label>Board</label>
        <referenceTo>ccpt__Board__c</referenceTo>
        <relationshipLabel>Group Links</relationshipLabel>
        <relationshipName>Group_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Grouping__c</fullName>
        <label>Group</label>
        <referenceTo>ccpt__Grouping__c</referenceTo>
        <relationshipLabel>Group Links</relationshipLabel>
        <relationshipName>Group_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Notepad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the notepad that this grouper is linked to.</description>
        <label>Notepad</label>
        <referenceTo>ccpt__Notepad__c</referenceTo>
        <relationshipLabel>Group Links</relationshipLabel>
        <relationshipName>Group_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Link</label>
    <nameField>
        <displayFormat>GR-{00000000}</displayFormat>
        <label>Grouper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>